chamber/styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Macondo&family=UnifrakturMaguntia&display=swap');
/* font-family: 'Macondo', cursive;             Paragraph
font-family: 'UnifrakturMaguntia', cursive;     Heading */


:root{
    --primary-bg: rgb(223,161,67);
    --primary-fg: rgb(13, 13, 13);
    --secondary-fg: rgb(0, 0, 0);
    --secondary-bg: rgb(255, 200, 112);
    --pop-color: rgb(43, 49, 64);
    --body-font:'Macondo', cursive;
    --heading-font:'UnifrakturMaguntia', cursive; 
}
html {
    padding: 0px;
    font-family: var(--body-font); 
}

body{
    text-align: center;
    max-width: 65%;
    margin: 0px auto;
}

h1,h2,h3,h4,h5,h6{
    font-family: var(--heading-font)
}

p {
    font-family: var(--body-font)
}

#logo{
    width:auto;
}
/* Header stuff */
#banner{
    display:flex;
    flex-direction: column;
    align-items: center;
    margin: 0;
    padding: 20px;
}

header{
    background-color: var(--primary-bg);
    color: var(--primary-fg);
    flex-direction:row;
    padding: 30px;
    padding-bottom:0px;
    border-style:ridge;
    border-color:var(--pop-color);
}

header h1{
    font-size: 2em;
    margin-top: 0px;
    margin-bottom: 0px;
    background-color: var(--primary-bg);
}

header div{
    align-self:center;
    text-align: center;
    background-color: var(--primary-bg);
}

header #banner{
    align-self:center;
    text-align: center;
    width: auto;
    background-color: var(--primary-bg);
}

nav{
    font-family:var(--body-font);
    display:flex;
    flex-direction: column;
    margin: 0 auto;
    text-align: center;
    align-items: center;
    align-self:center;
    width: 65%;
    border-style:ridge;
    padding-left: 3rem;
    border-color:var(--secondary-bg);
}

nav a{
    padding:7px 5px;
    width:25%;
}

nav a:link{
    color: var(--primary-fg)
}

nav a:visited{
    color:var(--primary-fg)
}
a:link{
    color:var(--pop-color)
}
a:visited{
    color:var(--primary-fg)
}

nav button{
    margin: .2rem 2vw;
    justify-content: center;
}

nav ul{
    list-style: none;
    padding: 0;
    margin: 0;
}
nav ul{
    display: none;
}
nav ul.open{
    display:block;
}

nav ul li a{
    display: block;
    padding: .8rem 2vw;
    text-decoration: none;
    color: #333;
    border-top:1px solid var(--primary-fg);
}

nav ul li a:hover{
    background-color: rgba(0, 0, 0, 0.3);
}

nav ul li.active a{
    background-color: rgba(0,0,0,0.2);
    color: #fff;
}

#hamburgerBtn {
    padding: 5px 5px;
    z-index: 300;
    width: min-content;
    align-self: center;
}

#hamburgerBtn img{
    height: 30px;
    width: 30px;
}

#hamburgerBtn span:nth-child(1){display: block;}
#hamburgerBtn span:nth-child(2){display: none;}

#hamburgerBtn.open span:nth-child(1){display: none;}
#hamburgerBtn.open span:nth-child(2){display: block;}

/* Main stuff */
main{
    /*padding: 40px;*/
    background-color: var(--secondary-bg);
    color: var(--secondary-fg);
    border-style:ridge;
    border-color:var(--secondary-bg);
    display: flex;
    flex-direction: column;
}

main h2,h3,h4 {
    color: var(--primary-fg);
    filter: brightness(150%);
}

#herooo{
    width:100%;
    margin: 0 auto;
}

.herodiv{
    margin: 10px auto;
    position: relative;
    border: 1px;
    width: 100%;
    align-items: center;
}



.heroimg{
    /*max-width:400px;*/
}

.heroimg img{
    width: 100%;
}

main > div {
    /*border-style: double; */
    /*border-color: var(--pop-color);*/
    /* max-width: fit-content; */
    color: var(--primary-fg);
    background-color: #F5FBDF;
    /* margin: 1rem; */
    display: block;
    
}

#weather-div{
    width:100%;  
    margin: 0 auto;  
}
#clouds {
    width: 100%;
}

.weatherdiv {
    width: 100%;
    
}


#spotlights-div{
    width:100%;
  /*  margin:0 auto; */
}
.spotlights{
    max-width: 100%;
}



#events{
    width:100%;
}

#newshere {
    width: 100%;
    height: 90%;
}

#whatshappening {
    width: 100%;
    margin: 10px auto;
}

#hotoffthepress{
    width: 100%;
}

#wantin{
    width:100%;
    margin: 0 auto;
}
.join{

}

/* Footer stuff */

footer{
    background-color: var(--primary-bg);
    color: var(--primary-fg);
    display: flex;
    padding: 15px 40px;
    font-size: 70%;
    justify-content: center;
    border-style:ridge;
    border-color:var(--secondary-bg);
}

/* Brian did this */
 
/*div { Use padding to space stuff out.
    margin: 0;

.weatherdiv {
    grid-template-columns: 1/2;
    grid-template-rows: 2/3;
    width: 100%;
}
#weather-div {
    width: 100%;
} 
*/

#herooo,
#whatshappening,
#weather-div,
#wantin,
#hotoffthepress,
#spotlights-div {
    width:100%;
    height:100%;
    background-color: #F5FBDF;
    padding: 10px;
    margin: 0;
    box-sizing: border-box;
    
}

form fieldset{
    margin:2rem 0;
    border: 1px solid black;
    border-radius: 10px;
    padding: .5rem 2%;
}
form legend{
    color: black;
    margin: 0 1rem;
    padding: 0 .5rem;

}

form label.top, form div{
    display:block;
    padding-top: 1rem;
    color: black;
    font-size:.9rem;
}

form label.top input, form label.top select{
    -webkit-appearance: none;
    /*display: block;*/
    font-size: 1rem;
    border: solid 1px #999;
    border-radius: 4px;
    padding:.75px;
    color: var(--primary-fg);
    width: 100%;
    max-width: 20rem;
    background-color: rgba(0,0,0,0.1)
}

form label.sbs{
    display: block;
    padding: .75rem 0;
    color: black;
    text-align: center;
}
form input.submitBtn{
    border: none;
    background-color: gold;
    border-radius:1rem;
    padding: .75rem 1.5rem;
    margin: 0 0 2rem 2%;
    width: 96%;
    max-width: 20rem;
}

form label.top input:required{
    border-left: red solid 6px;
}

form label.top input:required:valid{
    border-left: green solid 6px;
}

table{
    border-collapse: collapse;
    border: 2px solid black;
    border-radius: 20px;
    letter-spacing: 1px;
    font-size: 0.8rem;
    width:auto;
    text-align: center;
}

td, th{
    border: 1px solid black;
    padding: 15px;
    width: auto;
    
}

th{
    background-color: gray;
    color:white;
    height: auto;
}

td{
    text-align: center;
    height:auto;
}
tr:hover{
    background-color: rgba(238, 215, 12, 0.815);
}
tr:nth-child(odd){
    background-color:var(--secondary-bg);
}
tr{
    width:auto;
    background-color: var(--primary-bg);
}
tbody{
    font-size:100%;
    font-style: italic;
    width: auto;
}
caption{
    caption-side: bottom;
    background-color: var(--primary-bg);    
}
#members{
    width:100%;
}

